--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "dataloader": "^1.4.0",
     "deepmerge": "^4.2.2",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "express": "*",
     "graphql": "^14.5.8",
     "graphql-depth-limit": "^1.1.0",
     "graphql-iso-date": "^3.6.1",
@@ -104,5 +104,8 @@
       "stylelint",
       "git add"
     ]
+  },
+  "dependencies": {
+    "errorhandler": "^1.5.1"
   }
 }
