--- a/.gitignore
+++ b/.gitignore
@@ -68,3 +68,4 @@ packages/client/static/build/
 # GraphQL generated files
 packages/*/src/generated/*
 !packages/*/src/generated/.keep
+node_modules
